# log-search-rust

./: .gitignore  README.md
backend/: .env  Cargo.toml  README.md  sample.env
backend/src/: datapoint_mapping.rs  main.rs
backend/src/config/: mod.rs  mongo_client_config.rs
backend/src/models/: log_model.rs  mod.rs
backend/src/services/: insertlogs.rs  mod.rs  searchservice.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  setupProxy.js
frontend/src/Components/: DataGridComponent.jsx  DateTimePicker.jsx  HomePage.jsx
